# colonel

./: .gitignore  AGENTS.md  README.md  pyproject.toml
colonel/: __init__.py  __version__.py
colonel/agent/: __init__.py  analyzer.py  prompts.py  provider.py
colonel/artifacts/: __init__.py  report.py
colonel/artifacts/templates/: bottlenecks.md.j2  profile_summary.md.j2  recommendations.md.j2
colonel/cli/: __init__.py  analyze_cmd.py  config_cmd.py  main.py  profile_cmd.py  session_cmd.py  setup_cmd.py
colonel/config/: __init__.py  settings.py
colonel/core/: __init__.py  context.py  executor.py  result.py  session.py
colonel/evaluators/: __init__.py  base.py  nsight_compute.py  nsight_systems.py  registry.py
colonel/targets/: __init__.py  base.py  local.py  ssh.py
colonel/utils/: __init__.py  parsers.py  rich_output.py
demos/vllm/: 01_single_inference.py  02_batch_sweep.py  03_model_compare.py  04_ncu_deep_dive.py  GUIDE.md
gpu_smoke/: GPU_TEST_COMMANDS.md  kernel_showcase.py  matmul.py
