[build-system]
requires = ["hatchling", "packaging>=21.0"]
build-backend = "hatchling.build"

[project]
name = "colonel"
dynamic = ["version"]
description = "Agentic CLI tool for remote and on-prem GPU profiling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alan" },
]
keywords = ["gpu", "profiling", "cuda", "nsight", "agent", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware",
]
dependencies = [
    "typer>=0.15.0",
    "click>=8.1.0,<8.2.0",
    "rich>=13.0.0",
    "anthropic>=0.42.0",
    "paramiko>=3.5.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "jinja2>=3.1.0",
    "orjson>=3.10.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
colonel = "colonel.cli.main:app"

[project.urls]
Homepage = "https://github.com/colonel-gpu/colonel"
Repository = "https://github.com/colonel-gpu/colonel"
Issues = "https://github.com/colonel-gpu/colonel/issues"

[tool.hatch.version]
path = "colonel/__version__.py"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
